// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`db should be able to get a list 1`] = `
Array [
  Object {
    "key": "baz",
  },
  Object {
    "key": "foo",
  },
]
`;

exports[`db should be able to get a list after (starting) some value 1`] = `
Array [
  Object {
    "key": "eoo",
  },
  Object {
    "key": "foo",
  },
]
`;

exports[`db should be able to get a list after some value 1`] = `
Array [
  Object {
    "key": "foo",
  },
]
`;

exports[`db should be able to get a list before (starting) some value 1`] = `
Array [
  Object {
    "key": "baz",
  },
  Object {
    "key": "eoo",
  },
]
`;

exports[`db should be able to get a list before some value 1`] = `
Array [
  Object {
    "key": "baz",
  },
]
`;

exports[`db should be able to get a list with a limited count 1`] = `
Array [
  Object {
    "key": "baz",
  },
]
`;

exports[`db should be able to get a reversed list 1`] = `
Array [
  Object {
    "key": "foo",
  },
  Object {
    "key": "baz",
  },
]
`;

exports[`db should be able to put & get a value 1`] = `
Object {
  "key": "bar",
  "value": Object {
    "body": undefined,
    "title": "bar",
  },
}
`;

exports[`db should throw when value isn't there 1`] = `[NotFoundError: Key not found in database]`;
